<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/menu_home"
            android:title="@string/menu_home"
            android:icon="@drawable/ic_home"
            ></item>
        <item
            android:id="@+id/menu_about"
            android:title="@string/menu_about"
            android:icon="@drawable/ic_about"
            ></item>
    </group>

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/menu_signOut"
            android:title="@string/menu_sign_out"
            android:icon="@drawable/ic_logout"
            ></item>
    </group>
</menu>