<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp"
    android:paddingBottom="15dp"
    android:background="@color/gray_dark">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_maintenance"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:gravity="center"
        android:layout_marginTop="15dp"></TextView>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            "VEHICLE"
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_maintenance_vehiculo"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"></TextView>
            <Spinner
                android:id="@+id/vehicle_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"/>
            "DETAIL"
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_maintenance_detalle"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"></TextView>
            <EditText
                android:id="@+id/detail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:lines="2"
                android:inputType="textMultiLine"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:padding="10dp"></EditText>

            "DATE"
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_maintenance_fechaprog"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"></TextView>
            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:hint="@string/hint_date"
                android:textStyle="bold"
                android:padding="5dp"
                android:drawableTop="@drawable/calendar"
                android:inputType="date"/>
            "ACTIONS"
            <Button
                android:id="@+id/btn_add_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/btn_add"
                android:textAlignment="center"
                android:backgroundTint="@color/gray_ligth"></Button>
            <Button
                android:id="@+id/btn_cancel_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/btn_cancel"
                android:textAlignment="center"
                android:backgroundTint="@color/white"></Button>
        </LinearLayout>
    </ScrollView>
</LinearLayout>