<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp"
    android:paddingBottom="5dp"
    android:background="@color/gray_dark">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_record"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="15dp"/>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_maintenance_vehiculo"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="start"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"/>
            <Spinner
                android:id="@+id/vehicle_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_maintenance_detalle"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="start"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"/>
            <EditText
                android:id="@+id/detail_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:lines="2"
                android:inputType="textMultiLine"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:padding="10dp"
                android:autofillHints=""
                tools:ignore="LabelFor" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_maintenance_cost"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="start"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"/>
            <EditText
                android:id="@+id/cost_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:lines="2"
                android:inputType="numberDecimal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:padding="10dp"
                android:autofillHints=""
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_record_date_completed"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:gravity="start"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:hint="@string/hint_date"
                android:textStyle="bold"
                android:padding="5dp"
                app:drawableTopCompat="@drawable/calendar" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_marginTop="20sp"
        android:background="@color/gray_ligth"
        android:layout_width="match_parent"
        android:layout_height="1dp">
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="end"
        android:paddingEnd="15dp"
        android:paddingStart="0dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_add_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:padding="10dp"
            android:text="@string/btn_add"
            android:background="#00FF0000"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textAlignment="center"
            tools:ignore="ButtonStyle,UnusedAttribute" />
        <Button
            android:id="@+id/btn_cancel_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:padding="10dp"
            android:text="@string/btn_cancel"
            android:textAlignment="center"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:background="#00FF0000"
            tools:ignore="ButtonStyle,UnusedAttribute" />
    </LinearLayout>
</LinearLayout>