<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp"
    android:paddingBottom="15dp"
    android:background="@color/gray_dark">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_vehicle"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:gravity="center"
        android:layout_marginTop="15dp"></TextView>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_vehicle_marca"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"></TextView>

            <AutoCompleteTextView
                android:id="@+id/brand_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_vehicle_modelo"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"/>
            <AutoCompleteTextView
                android:id="@+id/model_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:background="@color/white"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_vehicle_anio"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"></TextView>
            <EditText
                android:id="@+id/year_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:inputType="number"
                android:background="@color/white"
                android:padding="10dp"></EditText>

            <Button
                android:id="@+id/btn_add_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/btn_add"
                android:textAlignment="center"
                android:backgroundTint="@color/gray_ligth"></Button>
            <Button
                android:id="@+id/btn_cancel_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:gravity="left"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:text="@string/btn_cancel"
                android:textAlignment="center"
                android:backgroundTint="@color/white"></Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>