<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:backgroundTint="@color/light_gray"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="5dp"
    android:focusable="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:backgroundTint="@color/light_gray"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_vehicle_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/txt_vehicle_name"
            android:ellipsize="end"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="106dp"
            android:layout_height="104dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_vehicle_year"
            app:layout_constraintEnd_toStartOf="@+id/txt_vehicle_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vehicles"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/txt_about_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:text="@string/txt_vehicle_brand"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
            app:layout_constraintTop_toBottomOf="@+id/txt_vehicle_name" />

        <TextView
            android:id="@+id/txt_vehicle_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="2dp"
            android:textColor="@color/white"
            android:layout_marginBottom="9dp"
            android:text="@string/txt_vehicle_year"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewProfile" />

        <ImageButton
            android:id="@+id/btn_maintenance_menu"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_pop_menu"
            android:contentDescription="@string/app_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>